2007-03-13  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs
	(AddToProjectToggled): Change the sensitivity of the "Path:" label
	as well.
	(InitializeComponents): Keep a reference tot he Path label so we
	can change its sensitivity as well.

2007-03-13  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs (InitializeDialog):
	New method to init projectLangs, categories, etc and to
	InitializeView if updating (e.g. after the user picks a project to
	add it to).
	(InitializeTemplates): Only use parentProject if it is the project
	the user has chosen to add his/her new file to.
	(AddTemplate): Same.
	(AddToProjectToggled): Update the view by calling InitializeDialog().
	(AddToProjectComboChanged): Same.

2007-03-12  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs (OpenEvent): If the
	user has chosen to add the file to a project, use the chosen
	project and path variables.
	(InitializeComponents): If the parentProject is null, add UI
	elements to enable the user to choose which project (and what
	path) he'd like to add the new source file to (or not).
	(InitializeComponents): Add a Activated signal handler to the
	nameEntry widget which will emit the Clicked event on the
	okButton.
	(AddToProjectComboChanged): ComboBox.ActiveText does not exist in
	Gtk-2.4. Also, don't change basePath if the user has manually
	changed it.
	(InitializeComponents): Connect to the PathChanged signal on the
	Add-to-Project FolderEntry to listen for changes typed manually.

2007-03-08  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.GotoTypeDialog.cs:
	* MonoDevelop.Ide.Gui.Dialogs/GotoTypeDialog.cs: Merged with 
	  OpenFileInSolutionDialog.
	* MonoDevelop.Ide.mdp: Updated.

2007-03-07  Zach Lute <zach.lute@gmail.com>

	* MonoDevelop.Ide.addin.xml,
	* MonoDevelop.Ide.Commands/FileCommands.cs: Added OpenFileInSolution
	  command and appropriate handler.