@@ -1,3 +1,10 @@
+2007-03-14  Jeffrey Stedfast  <fejj@novell.com>
+
+	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs
+	(InitializeComponents): Don't crash if no project is selected in
+	the solution.
+	(InitializeDialog): Clear the iconView.
+
 2007-03-13  Jeffrey Stedfast  <fejj@novell.com>
 
 	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs
